espn scraping tool works

--- a/nbs/espn_scrape.ipynb
+++ b/nbs/espn_scrape.ipynb
@@ -12,189 +12,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd4b1ce4",
+   "execution_count": 3,
+   "id": "fb06e301",
    "metadata": {},
    "outputs": [],
    "source": [
+    "!*go mod edit -replace \"github.com/umbralcalc/trywizard=/home/robert/Code/trywizard\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dd4b1ce4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Events for game 600014 ===\n",
+      "{0 {1 try} 5 0 {1} {307 6'} {0 6'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{296838 Jack van Poortvliet}}]}\n",
+      "{0 {2 conversion} 7 0 {1} {359 6'} {0 6'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{165132 Handre Pollard}}]}\n",
+      "{0 {3 penalty goal} 7 3 {1} {549 10'} {0 10'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{158721 Finn Russell}}]}\n",
+      "{0 {1 try} 7 8 {1} {1600 27'} {0 27'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{227779 Thomas du Toit}}]}\n",
+      "{0 {2 conversion} 7 10 {1} {1657 28'} {0 28'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{158721 Finn Russell}}]}\n",
+      "{0 {5 yellow card} 7 10 {1} {1700 29'} {0 29'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{226027 Julian Montoya}}]}\n",
+      "{0 {7 player substituted} 7 10 {1} {1794 30'} {0 30'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{290928 Tommy Reffell}}]}\n",
+      "{0 {8 substitute on} 7 10 {1} {1794 30'} {0 30'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{246163 Charlie Clare}}]}\n",
+      "{0 {7 player substituted} 7 10 {1} {2368 40'} {0 40'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{246163 Charlie Clare}}]}\n",
+      "{0 {8 substitute on} 7 10 {1} {2368 40'} {0 40'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{290928 Tommy Reffell}}]}\n",
+      "{0 {3 penalty goal} 7 13 {1} {2468 42'} {0 42'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{158721 Finn Russell}}]}\n",
+      "{0 {1 try} 7 18 {2} {2969 50'} {0 50'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{296821 Max Ojomoh}}]}\n",
+      "{0 {2 conversion} 7 20 {2} {3018 51'} {0 51'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{158721 Finn Russell}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3044 51'} {0 51'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{301431 Joseph Woodward}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3044 51'} {0 51'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{272291 Izaia Perese}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3295 55'} {0 55'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{296838 Jack van Poortvliet}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3295 55'} {0 55'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{27263 Ben Youngs}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3296 55'} {0 55'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{290928 Tommy Reffell}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3296 55'} {0 55'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{301429 Emeka Ilione}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3693 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{294406 Miles Reid}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3693 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{295278 Alfie Barbeary}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3694 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{146491 Quinn Roux}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3694 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{290459 Josh Bayliss}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3695 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{254479 Beno Obano}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3695 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{226759 Francois van Wyk}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3696 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{227779 Thomas du Toit}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3696 62'} {0 62'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{285791 Will Stuart}}]}\n",
+      "{0 {7 player substituted} 7 20 {2} {3787 64'} {0 64'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{294374 Joe Heyes}}]}\n",
+      "{0 {8 substitute on} 7 20 {2} {3787 64'} {0 64'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{27796 Dan Cole}}]}\n",
+      "{0 {1 try} 12 20 {2} {4059 68'} {0 68'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{296974 Solomone Kata}}]}\n",
+      "{0 {2 conversion} 14 20 {2} {4090 69'} {0 69'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{165132 Handre Pollard}}]}\n",
+      "{0 {7 player substituted} 14 20 {2} {4123 69'} {0 69'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{174270 Tom Dunn}}]}\n",
+      "{0 {8 substitute on} 14 20 {2} {4123 69'} {0 69'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{116751 Niall Annett}}]}\n",
+      "{0 {7 player substituted} 14 20 {2} {4124 69'} {0 69'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{212571 Charlie Ewels}}]}\n",
+      "{0 {8 substitute on} 14 20 {2} {4124 69'} {0 69'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{212599 Ross Molony}}]}\n",
+      "{0 {7 player substituted} 14 20 {2} {4125 69'} {0 69'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{172276 Nicky Smith}}]}\n",
+      "{0 {8 substitute on} 14 20 {2} {4125 69'} {0 69'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{180368 James Cronin}}]}\n",
+      "{0 {5 yellow card} 14 20 {2} {4171 70'} {0 70'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{27796 Dan Cole}}]}\n",
+      "{0 {3 penalty goal} 14 23 {2} {4236 71'} {0 71'} {25898  s:300~t:25898 Bath Rugby BATH Bath Rugby   [] []} [{{158721 Finn Russell}}]}\n",
+      "{0 {7 player substituted} 14 23 {2} {4301 72'} {0 72'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{217807 Olly Cracknell}}]}\n",
+      "{0 {8 substitute on} 14 23 {2} {4301 72'} {0 72'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{289380 Matt Rogerson}}]}\n",
+      "{0 {1 try} 19 23 {2} {4528 76'} {0 76'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{301429 Emeka Ilione}}]}\n",
+      "{0 {2 conversion} 21 23 {2} {4569 77'} {0 77'} {25903  s:300~t:25903 Leicester Tigers LEICS Leicester Tigers   [] []} [{{165132 Handre Pollard}}]}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "import (\n",
-    "  \"encoding/json\"\n",
-    "  \"fmt\"\n",
-    "  \"io\"\n",
-    "  \"log\"\n",
-    "  \"net/http\"\n",
+    "  \"github.com/umbralcalc/trywizard/pkg/espn\"\n",
     ")\n",
-    "\n",
-    "type Summary struct {\n",
-    "\tHeader Header `json:\"header\"`\n",
-    "}\n",
-    "\n",
-    "type Header struct {\n",
-    "\tID         string        `json:\"id\"`\n",
-    "\tUID        string        `json:\"uid\"`\n",
-    "\tSeason     Season        `json:\"season\"`\n",
-    "\tTimeValid  bool          `json:\"timeValid\"`\n",
-    "\tCompetitions []Competition `json:\"competitions\"`\n",
-    "}\n",
-    "\n",
-    "type Season struct {\n",
-    "\tYear int `json:\"year\"`\n",
-    "\tType int `json:\"type\"`\n",
-    "}\n",
-    "\n",
-    "type Competition struct {\n",
-    "\tID                   string       `json:\"id\"`\n",
-    "\tUID                  string       `json:\"uid\"`\n",
-    "\tDate                 string       `json:\"date\"`\n",
-    "\tNeutralSite          bool         `json:\"neutralSite\"`\n",
-    "\tConferenceCompetition bool        `json:\"conferenceCompetition\"`\n",
-    "\tBoxscoreAvailable    bool         `json:\"boxscoreAvailable\"`\n",
-    "\tCommentaryAvailable  bool         `json:\"commentaryAvailable\"`\n",
-    "\tLiveAvailable        bool         `json:\"liveAvailable\"`\n",
-    "\tOnWatchESPN          bool         `json:\"onWatchESPN\"`\n",
-    "\tRecent               bool         `json:\"recent\"`\n",
-    "\tWallclockAvailable   bool         `json:\"wallclockAvailable\"`\n",
-    "\tBoxscoreSource       string       `json:\"boxscoreSource\"`\n",
-    "\tPlayByPlaySource     string       `json:\"playByPlaySource\"`\n",
-    "\tCompetitors          []Competitor `json:\"competitors\"`\n",
-    "\tStatus               Status       `json:\"status\"`\n",
-    "\tDetails              []Event      `json:\"details\"`\n",
-    "}\n",
-    "\n",
-    "type Competitor struct {\n",
-    "\tID         string  `json:\"id\"`\n",
-    "\tUID        string  `json:\"uid\"`\n",
-    "\tOrder      int     `json:\"order\"`\n",
-    "\tHomeAway   string  `json:\"homeAway\"`\n",
-    "\tWinner     bool    `json:\"winner\"`\n",
-    "\tTeam       Team    `json:\"team\"`\n",
-    "\tScore      string  `json:\"score\"`\n",
-    "\tLinescores []Linescore `json:\"linescores\"`\n",
-    "\tRecord     []Record    `json:\"record\"`\n",
-    "\tPossession bool        `json:\"possession\"`\n",
-    "\tForm       string      `json:\"form\"`\n",
-    "}\n",
-    "\n",
-    "type Team struct {\n",
-    "\tID              string   `json:\"id\"`\n",
-    "\tGUID            string   `json:\"guid\"`\n",
-    "\tUID             string   `json:\"uid\"`\n",
-    "\tName            string   `json:\"name\"`\n",
-    "\tAbbreviation    string   `json:\"abbreviation\"`\n",
-    "\tDisplayName     string   `json:\"displayName\"`\n",
-    "\tShortDisplayName string  `json:\"shortDisplayName\"`\n",
-    "\tColor           string   `json:\"color\"`\n",
-    "\tLogos           []Logo   `json:\"logos\"`\n",
-    "\tLinks           []Link   `json:\"links\"`\n",
-    "}\n",
-    "\n",
-    "type Logo struct {\n",
-    "\tHref        string   `json:\"href\"`\n",
-    "\tWidth       int      `json:\"width\"`\n",
-    "\tHeight      int      `json:\"height\"`\n",
-    "\tAlt         string   `json:\"alt\"`\n",
-    "\tRel         []string `json:\"rel\"`\n",
-    "\tLastUpdated string   `json:\"lastUpdated\"`\n",
-    "}\n",
-    "\n",
-    "type Link struct {\n",
-    "\tRel  []string `json:\"rel\"`\n",
-    "\tHref string   `json:\"href\"`\n",
-    "\tText string   `json:\"text\"`\n",
-    "}\n",
-    "\n",
-    "type Linescore struct {\n",
-    "\tDisplayValue string `json:\"displayValue\"`\n",
-    "}\n",
-    "\n",
-    "type Record struct {\n",
-    "\tType         string `json:\"type\"`\n",
-    "\tSummary      string `json:\"summary\"`\n",
-    "\tDisplayValue string `json:\"displayValue\"`\n",
-    "}\n",
-    "\n",
-    "type Status struct {\n",
-    "\tType StatusType `json:\"type\"`\n",
-    "}\n",
-    "\n",
-    "type StatusType struct {\n",
-    "\tID          string `json:\"id\"`\n",
-    "\tName        string `json:\"name\"`\n",
-    "\tState       string `json:\"state\"`\n",
-    "\tCompleted   bool   `json:\"completed\"`\n",
-    "\tDescription string `json:\"description\"`\n",
-    "\tDetail      string `json:\"detail\"`\n",
-    "\tShortDetail string `json:\"shortDetail\"`\n",
-    "}\n",
-    "\n",
-    "type Event struct {\n",
-    "\tSequenceNumber string      `json:\"sequenceNumber\"`\n",
-    "\tType           EventType   `json:\"type\"`\n",
-    "\tAwayScore      int         `json:\"awayScore\"`\n",
-    "\tHomeScore      int         `json:\"homeScore\"`\n",
-    "\tPeriod         Period      `json:\"period\"`\n",
-    "\tClock          Clock       `json:\"clock\"`\n",
-    "\tAddedClock     Clock       `json:\"addedClock\"`\n",
-    "\tTeam           Team        `json:\"team\"`\n",
-    "\tParticipants   []Participant `json:\"participants\"`\n",
-    "}\n",
-    "\n",
-    "type EventType struct {\n",
-    "\tID   string `json:\"id\"`\n",
-    "\tText string `json:\"text\"`\n",
-    "}\n",
-    "\n",
-    "type Period struct {\n",
-    "\tNumber int `json:\"number\"`\n",
-    "}\n",
-    "\n",
-    "type Clock struct {\n",
-    "\tValue        float64    `json:\"value\"`\n",
-    "\tDisplayValue string `json:\"displayValue\"`\n",
-    "}\n",
-    "\n",
-    "type Team struct {\n",
-    "\tID           string `json:\"id\"`\n",
-    "\tUID          string `json:\"uid\"`\n",
-    "\tName         string `json:\"name\"`\n",
-    "\tAbbreviation string `json:\"abbreviation\"`\n",
-    "\tDisplayName  string `json:\"displayName\"`\n",
-    "}\n",
-    "\n",
-    "type Participant struct {\n",
-    "\tAthlete Athlete `json:\"athlete\"`\n",
-    "}\n",
-    "\n",
-    "type Athlete struct {\n",
-    "\tID          string `json:\"id\"`\n",
-    "\tDisplayName string `json:\"displayName\"`\n",
-    "}\n",
-    "\n",
-    "func fetchEvents(gameID string) ([]Event, error) {\n",
-    "  url := fmt.Sprintf(\"https://site.api.espn.com/apis/site/v2/sports/rugby/267979/summary?event=%s\", gameID)\n",
-    "  resp, err := http.Get(url)\n",
-    "  if err != nil {\n",
-    "    return nil, err\n",
-    "  }\n",
-    "  defer resp.Body.Close()\n",
-    "  body, err := io.ReadAll(resp.Body)\n",
-    "  if err != nil {\n",
-    "    return nil, err\n",
-    "  }\n",
-    "  var sum Summary\n",
-    "  if err := json.Unmarshal(body, &sum); err != nil {\n",
-    "    return nil, err\n",
-    "  }\n",
-    "  return sum.Header.Competitions[0].Details, nil\n",
-    "}\n",
     "\n",
     "%% \n",
     "\n",
     "// TODO: load/derive list of gameIDs for this season\n",
-    "gameIDs := []string{\"600014\"} // etc\n",
+    "gameIDs := []string{\"600014\"}\n",
     "\n",
     "for _, gid := range gameIDs {\n",
-    "  events, err := fetchEvents(gid)\n",
+    "  events, err := espn.FetchEvents(gid)\n",
     "  if err != nil {\n",
     "    log.Printf(\"Error fetching %s: %v\\n\", gid, err)\n",
     "    continue\n",
