--- a/nbs/data_exploration.ipynb
+++ b/nbs/data_exploration.ipynb
@@ -5,9 +5,13 @@
    "id": "ada0f7ba",
    "metadata": {},
    "source": [
-    "# Data\n",
+    "# Data exploration\n",
     "\n",
-    "Inspecting the data queried from the SportDevs API."
+    "> These are Go notebooks: In order to use the GoNB Jupyter Kernel, please install GoNB from here: https://github.com/janpfeifer/gonb\n",
+    "\n",
+    "Note also that for local package development, you can put: `!*go mod edit -replace \"github.com/umbralcalc/trywizard=/path/to/trywizard\"` at the top of any cell.\n",
+    "\n",
+    "In this notebook we're exploring the data queried from the SportDevs API."
    ]
   },
   {
