--- a/nbs/data_exploration.ipynb
+++ b/nbs/data_exploration.ipynb
@@ -39,6 +39,7 @@
     "\n",
     "%%\n",
     "\n",
+    "// Nothing from here...\n",
     "fmt.Println(sportdevs.FetchMatchIncidents(7))"
    ]
   },
@@ -46,6 +47,50 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "007af31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"github.com/umbralcalc/trywizard/pkg/sportdevs\"\n",
+    "\n",
+    "%%\n",
+    "\n",
+    "fmt.Println(sportdevs.FetchMatchStatistics(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5b4a9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"github.com/umbralcalc/trywizard/pkg/sportdevs\"\n",
+    "\n",
+    "%%\n",
+    "\n",
+    "// Nothing from here...\n",
+    "fmt.Println(sportdevs.FetchMatchPlayersStatistics(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9719b31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"github.com/umbralcalc/trywizard/pkg/sportdevs\"\n",
+    "\n",
+    "%%\n",
+    "\n",
+    "// Nothing from here...\n",
+    "fmt.Println(sportdevs.FetchMatchLineups(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33bad33e",
    "metadata": {},
    "outputs": [],
    "source": []
