event data plotting started

--- a/nbs/sportdevs_exploration.ipynb
+++ b/nbs/sportdevs_exploration.ipynb
@@ -5,7 +5,7 @@
    "id": "ada0f7ba",
    "metadata": {},
    "source": [
-    "# Data exploration\n",
+    "# SportDevs data exploration\n",
     "\n",
     "> These are Go notebooks: In order to use the GoNB Jupyter Kernel, please install GoNB from here: https://github.com/janpfeifer/gonb\n",
     "\n",
