improved plotting methods

--- a/nbs/event_features.ipynb
+++ b/nbs/event_features.ipynb
@@ -34,47 +34,21 @@
     "import (\n",
     "\t\"os\"\n",
     "\t\"github.com/umbralcalc/trywizard/pkg/features\"\n",
-    "\t\"github.com/go-gota/gota/series\"\n",
-    "\t\"github.com/go-gota/gota/dataframe\"\n",
-    "\t\"github.com/go-echarts/go-echarts/v2/charts\"\n",
-    "\t\"github.com/go-echarts/go-echarts/v2/opts\"\n",
     "\tgonb_echarts \"github.com/janpfeifer/gonb-echarts\"\n",
     ")\n",
     "\n",
     "%%\n",
     "\n",
-    "scatter := charts.NewScatter()\n",
-    "scatter.SetGlobalOptions(\n",
-    "\tcharts.WithXAxisOpts(opts.XAxis{\n",
-    "\t\tName: \"minute\",\n",
-    "\t}),\n",
-    "\tcharts.WithTooltipOpts(opts.Tooltip{\n",
-    "\t\tTrigger:   \"item\",\n",
-    "\t\tFormatter: \"({c})\",\n",
-    "\t}),\n",
-    ")\n",
-    "\n",
     "df := features.GetRawEventsDataFrame()\n",
     "cdf := features.TransformToEventCounts(&df)\n",
-    "for _, eventType := range features.GetUniqueEventTypes(&df) {\n",
-    "\tpoints := make([]opts.ScatterData, 0)\n",
-    "\tfdf := cdf.Filter(dataframe.F{\n",
-    "\t\tColname:    \"event_type\",\n",
-    "\t\tComparator: series.Eq,\n",
-    "\t\tComparando: eventType,\n",
-    "\t})\n",
-    "\tminutes, _ := fdf.Col(\"minute\").Int()\n",
-    "\tcounts := fdf.Col(\"event_type_COUNT\").Float()\n",
-    "\tfor i, minute := range minutes {\n",
-    "\t\tpoints = append(points, opts.ScatterData{\n",
-    "\t\t\tValue: []interface{}{minute, counts[i]},\n",
-    "\t\t})\n",
-    "\t}\n",
+    "scatter := features.NewDataFrameScatter(\n",
+    "\t&cdf, \n",
+    "\t\"minute\", \n",
+    "\t\"event_type_COUNT\",\n",
+    "\t\"event_type\",\n",
+    ")\n",
     "\n",
-    "\tscatter.AddSeries(eventType, points)\n",
-    "}\n",
-    "\n",
-    "gonb_echarts.Display(scatter, \"width: 1024px; height:400px; background: white;\")"
+    "gonb_echarts.Display(scatter, \"width: 1024px; height:400px; background: white;\")\n"
    ]
   },
   {
