added query to matches by date

--- a/nbs/sportdevs_exploration.ipynb
+++ b/nbs/sportdevs_exploration.ipynb
@@ -31,6 +31,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8195ef57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"github.com/umbralcalc/trywizard/pkg/sportdevs\"\n",
+    "\n",
+    "%%\n",
+    "\n",
+    "fmt.Println(sportdevs.FetchMatchesByDate(\"2025-06-07\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a5f0fd07",
    "metadata": {},
    "outputs": [],
@@ -39,7 +53,7 @@
     "\n",
     "%%\n",
     "\n",
-    "fmt.Println(sportdevs.FetchMatchIncidents(7))"
+    "fmt.Println(sportdevs.FetchMatchIncidents(774788))"
    ]
   },
   {
@@ -53,7 +67,7 @@
     "\n",
     "%%\n",
     "\n",
-    "fmt.Println(sportdevs.FetchMatchStatistics(2))"
+    "fmt.Println(sportdevs.FetchMatchStatistics(74788))"
    ]
   },
   {
@@ -67,7 +81,7 @@
     "\n",
     "%%\n",
     "\n",
-    "fmt.Println(sportdevs.FetchMatchPlayersStatistics(2))"
+    "fmt.Println(sportdevs.FetchMatchPlayersStatistics(74788))"
    ]
   },
   {
@@ -81,7 +95,7 @@
     "\n",
     "%%\n",
     "\n",
-    "fmt.Println(sportdevs.FetchMatchLineups(2))"
+    "fmt.Println(sportdevs.FetchMatchLineups(74788))"
    ]
   },
   {
