added smoothed event counts model

--- a/nbs/event_features.ipynb
+++ b/nbs/event_features.ipynb
@@ -47,7 +47,17 @@
     "\t\"event_type\",\n",
     ")\n",
     "\n",
-    "gonb_echarts.Display(scatter, \"width: 1024px; height:400px; background: white;\")\n"
+    "gonb_echarts.Display(scatter, \"width: 1024px; height:400px; background: white;\")\n",
+    "\n",
+    "sdf := features.TransformToSmoothedEventCounts(&df)\n",
+    "line := features.NewDataFrameLine(\n",
+    "\t&sdf, \n",
+    "\t\"minute\", \n",
+    "\t\"smoothed_event_type_COUNT\",\n",
+    "\t\"event_type\",\n",
+    ")\n",
+    "\n",
+    "gonb_echarts.Display(line, \"width: 1024px; height:400px; background: white;\")\n"
    ]
   },
   {
